PosTrack/PNLib-v3.1.33.5652/include/PNLib.h

/**********************************************************
 *          Initialize and config PNLib environment      *
 **********************************************************/
// Get this running PNLib version number
PNLIB_API PNLibVersion PNGetLibVersion();
// Initialize library
// Must initialize the library env by calling this function before using PNLib
PNLIB_API void PNLibInit();
// Set temporary folder or data export default folder.
// Calibration data will save to the temporary folder.
// Exoprted data file will be saved to the 'workingFolder'.
PNLIB_API void PNSetDataFolders(char* appDataFolder, char* workingFolder);
    
// Set data acquisition frequency. Unit: Hz
PNLIB_API void PNSetDataAcquisitionFrequency(int freq);
// Get data acquisition frequency.
PNLIB_API int PNGetDataAcquisitionFrequency();
// 装载上次校准完毕后缓冲的校准数据，以便即使程序重启也无需重新校准（传感器相对安装位置未做过调整的情况下）
PNLIB_API void PNLoadCalibrationData();
// 激活上台阶功能（关闭地面接触功能）
PNLIB_API void PNEnableClimbContact(int avatarIndex, PNBOOL enable);
// 重置上台阶参数
PNLIB_API void PNResetClimbContact(int avatarIndex);
// 是否激活磁免疫功能
PNLIB_API void PNEnableMagneticImmune(int avatarIndex, MagneticImmunityLevel level);
// Release PNLib
PNLIB_API void PNLibRelease();
    

/***********************************************************
 *        Register and config data output callbacks        *
 *                                                         *
 *    There are lots of levels to support diferent users   *
 * to use the data:                                        *
 * Level 1: Use a few sensors to capture and use raw sensor*
 *          data directly.                                 *
 * Level 2: Use a suit sensor, and want to use raw frame   *
 *          data to implementate thire arithmetic          *
 * Level 3: Use a suit sensor, and want to use calculated  *
 *          frame data to do something                     *
 * Level 4: Use a suit sensor, and want to use BVH data to *
 *          drive thire model directly                     *
 ***********************************************************/
// Register calibration progress callback
PNLIB_API void PNRegisterCalibrationProgressHandle(void* customObject, PNEventCalibrationProgressCallback handle);
// 设置动作识别事件回调函数
PNLIB_API void PNRegisterActionRecognitionStringDataBoardcastHandle(void* customObject, PNEventActionRecognitionDataStringStreamCallback handle);
// Set a name for avatar
PNLIB_API void PNSetAvatarName(int avatarIndex, char* name);
// Get avatar's name 
PNLIB_API void PNGetAvatarName(int avatarIndex, char* name, int buffLen);
// Binding a sensor to bone. Return FALSE if failed.
PNLIB_API PNBOOL PNBindSensor(int avatarIndex, int boneIndex, int sensorId);
// Remove sensor from refered bone
PNLIB_API PNBOOL PNRemoveSensor(int avatarIndex, int boneIndex);
// Reset sensors binding to default relationship with bones. Return FALSE if failed.
PNLIB_API PNBOOL PNResetBoneMapping(int avatarIndex);
// boneIndex从0开始
PNLIB_API char* PNGetBoneName(int avatarIndex, int boneIndex);
// sensorId从1开始
PNLIB_API char* PNGetBoneNameBySensorId(int avatarIndex, int sensorId);
// Get sensor ID based on 1 from refered bone. Return 0 means no sensor bound on the refered bone, -1 means error occured. 
PNLIB_API int PNGetSensorId(int avatarIndex, int boneIndex);
// Get bone id by sensor id. Return -1 if this sensor was not binded to a bone.
PNLIB_API int PNGetBoneIndexBySensorId(int avatarIndex, int sensorId);
// Check the current sensor binding if is comfortable with the refered calibration type
PNLIB_API PNBOOL PNCanCalibratePose(int avatarIndex, CalibrationTypes type);
// 数据输出频率的比率
// ratio: 1=1/1、2=1/2、4=1/4、8=1/8
PNLIB_API void PNSetDataOutputFrequencyRatio(int ratio);
/**********************************************************
 *             Calculation parameters settings            *
 **********************************************************/
// 获取Kalman参数
PNLIB_API KalmanParams* PNGetKalmanParams(int avatarIndex);
// 设置Kalman参数
PNLIB_API void PNSetKalmanParams(int avatarIndex, KalmanParams params);
// 设置jointStiffness
PNLIB_API void PNSetJointStiffness(int avatarIndex, float percent);
    
// 设置StepStiffness
PNLIB_API void PNSetStepStiffness(int avatarIndex, float percent);
    
// 设置StepConstraint
PNLIB_API void PNSetStepConstraint(int avatarIndex, float percent);
// 获取kalm因子
PNLIB_API void PNGetStiffnessPercent(int avatarIndex,
	float* jointStiffnessPercent,
	float* stepStiffnessPercent, 
	float* stepConstraintPercent);
/**********************************************************
 *                   Realtime data interface              *
 **********************************************************/
// Push raw data into PNLib
PNLIB_API void PNPushData(unsigned char* data, int len);
    
// Push avatar's raw data into PNLib
PNLIB_API void PNPushDataForAvatar(int avatarIndex, unsigned char* data, int len);
// Enable/disable fitting of lost data
PNLIB_API void PNEnableLostDataFitting(PNBOOL enable);
// Clear the buffered data used to calibration
// Before a new calibration, clear the preview buffered data by this function is required
PNLIB_API void PNResetCalibrationSteps(int avatarIndex);
// Start a calibrating action of avatar
PNLIB_API void PNCalibrateAvatar(int avatarIndex, CalibrationTypes type);
// Start a calibrating action for all avatar
PNLIB_API void PNCalibrateAllAvatars(CalibrationTypes type);
// Get receiving percent of sensor data
PNLIB_API int PNGetSensorReceivingStatus(int avatarIndex, float bufferForPercentData[FULL_BODY_BONE_COUNT]);
/**********************************************************
 *                 Data export operations                 *
 **********************************************************/
// 将原始数据导出到文件（默认导出一个总的raw文件及各个角色的分离raw文件）
PNLIB_API char* PNExportRawData();
PNLIB_API void  PNStopExportRawData();
// 导出某个人的某个传感器对应的中间数据
PNLIB_API char* PNExportRawDataTxt(int avatarIndex, int sensorId);
PNLIB_API void  PNStopExportRawDataTxt(int avatarIndex);
/**********************************************************
 *                    Action Recognition                  *
 **********************************************************/
// 是否激活动作识别
PNLIB_API void PNEnableActionRecognition(PNBOOL enable);