PosTrack/PNLib-v3.1.33.5652/include/PNDataTypes.h

// Magnetic immune levels
typedef enum _MagneticImmunityLevel
{
    MI_Disable,              // Disable magnetic immune function
    MI_Weak,                 // Low level  magnetic immune
    MI_Strong,               // Strong level  magnetic immune
    MI_Unknown,              // Unknown type
}MagneticImmunityLevel;
// Poses for calibration
typedef enum _CalibrationTypes
{
    Cali_TPose,              // T pose
    Cali_APose,              // A pose
    Cali_SPose,              // Crouching pose
    Cali_NPose,              // Nod pos
    Cali_Unknown,            // Unknown type
}CalibrationTypes;