PosTrack/PNLib-v3.1.33.5652/include/PNLib.cs


    #region PNLib API Wraper
    public class PNLib
    {
        // Get library's version information
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Struct)]
        public static extern DylibVersion PNGetLibVersion();

        // Initialize library
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNLibInit();
        
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNLibRelease();

        /// <summary>
        /// 是否启用传感器数据交换
        /// </summary>
        /// <param name="enable"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void EnableSensorDataExchange(bool enable);
        
        /// <summary>
        /// 设置角色名
        /// </summary>
        /// <param name="name"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetAvatarName(int avatar, string name);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNGetAvatarName(int avatar, StringBuilder name, int len = 100);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetDataFolders(string appDataDir, string workingFolder);
        
        // 激活上台阶功能
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableClimbContact(int avatarIndex, bool enable);
        // 重置上台阶参数
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNResetClimbContact(int avatarIndex);
        // 激活磁免疫功能
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableMagneticImmune(int avatar, MagneticImmunityLevel level);
        
        // 根据boneId获取sensorId
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern int PNGetSensorId(int avatarIndex, int boneIndex);
        /// <summary;
        /// 根据sensorId返回所在的骨骼编号
        /// </summary>
        /// <param name="sensorId">传感器Id</param>
        /// <returns>传感器所在的骨骼编号，如果传感器未使用则返回-1</returns>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern int PNGetBoneIndexBySensorId(int avatar, int sensorId);
        /// <summary>
        /// 绑定传感器
        /// </summary>
        /// <param name="boneIndex">骨骼编号</param>
        /// <param name="sensorId">传感器编号</param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNBindSensor(int avatar, int boneIndex, int sensorId);
        /// <summary>
        /// 移除传感器
        /// </summary>
        /// <param name="boneIndex">骨骼编号</param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNRemoveSensor(int avatarIndex, int boneIndex);        
        // 重置传感器与骨骼的映射关系
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNResetBoneMapping(int avatarIndex);
        // 基于现有传感器，是否能完成相应动作校准
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNCanCalibratePose(int avatarIndex, CalibrationTypes type);

         // boneIndex从0开始
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        private static extern IntPtr PNGetBoneName(int avatarIndex, int boneIndex);
        public static string GetBoneName(int avatarIndex, int boneIndex)
        {
            IntPtr addr = PNGetBoneName(avatarIndex, boneIndex);
            return Marshal.PtrToStringAnsi(addr);
        }

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        private static extern IntPtr PNGetBoneNameBySensorId(int avatarIndex, int sensorId);
        public static string GetBoneNameBySensorId(int avatarIndex, int sensorId)
        {
            IntPtr addr = PNGetBoneNameBySensorId(avatarIndex, sensorId);
            return Marshal.PtrToStringAnsi(addr);
        }

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNLoadCalibrationData();

        /// <summary>
        /// 设置动作识别事件回调函数
        /// </summary>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern void PNRegisterActionRecognitionStringDataBoardcastHandle(IntPtr customObject, PNEventActionRecognitionDataStringStreamCallback handle);


        /// <summary>
        /// 设置动作识别事件回调函数
        /// </summary>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern void PNRegisterActionEventBoardcastHandle(IntPtr customObject, PNRecognizedEvent handle);
        
        /// <summary>
        /// 是否激活动作识别
        /// </summary>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern void PNEnableActionRecognition(bool enable);

        /// <summary>
        /// 设置采集频率
        /// </summary>
        /// <param name="freq"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetDataAcquisitionFrequency(int freq);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern int PNGetDataAcquisitionFrequency();

        /// <summary>
        /// 数据输出频率的比率
        /// </summary>
        /// <param name="ratio">
        /// 1=1/1
        /// 2=1/2
        /// 4=1/4
        /// 8=1/8
        /// </param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetDataOutputFrequencyRatio(int ratio);
        
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNPushData(byte[] data, int len);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNPushDataForAvatar(int avatarIndex, byte[] data, int len);

        // 是否激活丢包补偿
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableLostDataFitting(bool enable);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterCalibrationProgressHandle(IntPtr customObject, PNCalibrationCallback PCFn);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNCalibrateAllAvatars(CalibrationTypes type);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNCalibrateAvatar(int avatarIndex, CalibrationTypes type);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNResetCalibrationSteps(int avatarIndex);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNClearAllAvatarCalibrationBufferedData();
        
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern int PNGetSensorReceivingStatus(int avatar, float[] bufferOfRatio);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Auto, ExactSpelling = true)]
        private static extern IntPtr PNGetKalmanParams(int avatar);
        public static Params GetKalmanParams(int avatarId)
        {
           IntPtr ptr = PNGetKalmanParams(avatarId);
           return (Params)(Marshal.PtrToStructure(ptr, typeof(Params)));
        }

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetKalmanParams(int avatarIndex, Params p);

        // 设置jointStiffness
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetJointStiffness(int avatarIndex, float percent);    
        // 设置StepStiffness
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetStepStiffness(int avatarIndex, float percent);    
        // 设置StepConstraint
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetStepConstraint(int avatarIndex, float percent);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNGetStiffnessPercent(int avatarIndex, ref float jointStiffnessPercent, 
                                                         ref float stepStiffnessPercent, 
                                                         ref float setpConstraintPercent);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNExportRawData();
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNStopExportRawData();
        
        // 导出某个人的某个传感器对应的中间数据
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNExportRawDataTxt(int avatarIndex, int sensorId);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNStopExportRawDataTxt(int avatarIndex);
